# Nek5000

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  ceed.okl  openacc_port_notes.rst
.github/workflows/: ci.yml  ci_llvm.yml  ci_macos.yml
cmt/: CMTDATA  CMTTIMERS  DG  ausm.f  diagnostics.f  diffusive_cmt.f  drive1_cmt.f  drive2_cmt.f  eqnsolver_cmt.f  face.f  filters_cmt.f  inflow_bc.f  step.f  surface_fluxes.f  wall_bc.f
cmt_cases/: README.md
cmt_cases/charles_particles/: SIZE  box.rea  box.usr  build.sh
cmt_cases/david_forces/: SIZE  box.rea  box.usr  box.usrp  partview
cmt_cases/david_rare3d/: SIZE  TORO  riemann.inp  (+3 more)
core/: .coef.f.swp  .log.out.swp  .nekio.c.swp  .postpro.f.swp  .prepost.f.swp  ADJOINT  AVG  AVM  AVMSVV  BCDICT  BND  CMTDATA  CTIMER  CVODE  DEALIAS  DOMAIN  DPROCMAP  DXYZ  EIGEN  ESOLV  FDMH1  GEOM  GFLDR  GLOBALCOM  GMRES  HEADER  HPF  HSMG  INPUT  IXYZ  LICENSE  LPM  MASS  MVGEOM  NEKMOAB  NEKNEK  NEKUSE  NONCON  OBJDATA  OPCTR  (+183 more)
core/benchmark/eddy_uv/: Makefile.am  Makefile.in  SIZE  compare_eddy_uv  eddy_uv.f  eddy_uv_nek.map  eddy_uv_nek.rea  eddy_uv_nek.usr  reference.out
core/benchmark/pipe_con/: Makefile.am  Makefile.in  SIZE  compare_pipe_con  pipe_con_nek.h5m  pipe_con_nek.rea  pipe_con_nek.usr  reference.out
core/benchmark/turbChannel/: Makefile.am  Makefile.in  SIZE  compare_turbChannel  reference.out  turbChannel_nek.map  turbChannel_nek.rea  turbChannel_nek.usr
core/benchmark/vortex/: Makefile.am  Makefile.in  SIZE  compare_vortex  reference.out  vortex_nek.map  vortex_nek.rea  vortex_nek.usr
docs/: Doxyfile  Nek5000.txt  SEM.txt  doxy.bib  mainpage.txt
jl/: CMakeLists.txt  Makefile  amg.c  amg_dump.c  amg_run.c  comm.c  comm_test  crs.h  crs_test.c  crystal.c  crystal.h  crystal_test  errmem.c  errmem.h  fail.c  fcrs.c  fcrystal.c  fcrystal3.c  findpt.c  findpt.h  findpts.c  findpts_el_2_test.c  gen_poly_imp.c  gs.c  gs.h  gs_acc.c  gs_defs.h  gs_hack.h  gs_local.c  gs_test  gs_test_old  gs_test_old.c  gs_unique_test  lob_bnd.c  minmax.h  permute_test.c  pfindpt.c  pfindpt_test.c  poly.c  poly.h  (+26 more)
jl/ext/: findpts_local.h
jl_acc/: Makefile  crystal2.c  fcrs.c  findpts.c  findpts2.c  gen_poly_imp.c  gs.c  gs.h  gs_acc.h  gs_hack.h  gs_local.c  gs_local.h  gs_local_acc.c  makefile.cdep  obbox_test.c  odep_info.py  poly_test.c  rand_elt_test.c  transfer.h  transfer_test.c  xxt.h
lib/: README
short_tests/: NekTests.py  README  README.md  dum.py
tools/: add_param_types.py  convert_size.py  makefile  maketools  maketools.inc  maketools.out  maketools.tests
(+981 files in other folders)
